--- a/css/main.css
+++ b/css/main.css
@@ -1168,7 +1168,7 @@ html .contenedor .arrow {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
-  margin: 50px 0px 50px;
+  margin: 50px 0px;
 }
 .containerTestimony .headline .subtitle {
   color: white;
@@ -1679,7 +1679,7 @@ html .contenedor .arrow {
   }
   .contenedor .heroSection .hero .info {
     width: 90%;
-    margin: 0px auto 100px auto;
+    margin: 0px auto 100px;
   }
   .contenedor .heroSection .hero .info .btnAction {
     width: 60%;
@@ -1756,7 +1756,7 @@ html .contenedor .arrow {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine {
     width: 100%;
@@ -1765,7 +1765,7 @@ html .contenedor .arrow {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 0 auto 60px;
+    margin: 0px auto 60px;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
     width: 55%;
@@ -1808,7 +1808,7 @@ html .contenedor .arrow {
   }
   .contenedor .contenedorMatch .bannerMatch {
     width: 60%;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones {
     width: 70%;
@@ -1859,7 +1859,7 @@ html .contenedor .arrow {
     margin: 0px auto;
     cursor: pointer;
     text-decoration: none;
-    color: #ffffff;
+    color: #e3e3e3;
     padding: 20px 350px 20px 40px !important;
     margin-left: -83px !important;
     border-bottom: 1px solid transparent;
@@ -1926,7 +1926,7 @@ html .contenedor .arrow {
   }
   .contenedor .contenedorMatch .bannerMatch {
     width: 65%;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match {
     font-size: 5rem;
@@ -1956,7 +1956,7 @@ html .contenedor .arrow {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 5;
+    margin: 50px 0px;
   }
   .footer .mainFooter .services {
     display: flex;
@@ -2096,7 +2096,7 @@ html .contenedor .arrow {
     width: 100%;
   }
   .contenedor .nosotros .containerInfo .info p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .contenedorEmpleos .subtitulo {
     font-size: 1.2rem;
@@ -2114,17 +2114,17 @@ html .contenedor .arrow {
     margin: 0px auto;
   }
   .contenedor .contenedorEmpleos .jobs .empleosArticle .subtitulo {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
   .contenedor .contenedorEmpleos .jobs .empleosArticle .contenedorEmpleo p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .contenedorEmpleos .jobs .empleosArticle .contenedorEmpleo .paragraph {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .contenedorEmpleos .jobs .empleosArticle .contenedorEmpleo .btnDesarrolladorDiseñador {
     width: 95%;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     margin: 0px auto;
   }
   .contenedor .contenedorEmpleos .screens {
@@ -2153,11 +2153,11 @@ html .contenedor .arrow {
     margin: 0px auto -2px -10px;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBotto .paragraph {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
   .contenedor .containerTestimony .verMas {
     width: 90%;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .patrocinadores .subtitulo {
     font-size: 1.2rem;
@@ -2173,27 +2173,27 @@ html .contenedor .arrow {
     width: 100%;
   }
   .contenedor .bannerPublicidadDos .bannerSection .banner .accordion .accordion-item .accordion-header .title {
-    font-size: 0.8rem !important;
+    font-size: 0.9rem !important;
   }
   .contenedor .bannerPublicidadDos .bannerSection .banner .accordion .accordion-item .paragraph {
-    font-size: 0.75rem !important;
+    font-size: 0.8rem !important;
   }
   .contenedor .accordion .subtitle {
     font-size: 1.2rem;
     font-weight: 600;
   }
   .contenedor .accordion .scrollDownAnswers summary {
-    font-size: 0.8rem !important;
+    font-size: 0.9rem !important;
   }
   .contenedor .accordion .scrollDownAnswers p {
     font-size: 0.75rem !important;
   }
   .contenedor .accordion .whatsApp {
     width: 100%;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .footer .mainFooter .footerMedium .news .accion .btnAccion {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }
 @media (max-width: 400px) {
@@ -2210,7 +2210,7 @@ html .contenedor .arrow {
     width: 90%;
   }
   .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
   }
   .contenedor .containerTestimony {
     width: 100%;
@@ -2234,7 +2234,7 @@ html .contenedor .arrow {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin: 50px auto;
+    margin: 50px 0px;
   }
 }
 @media (max-width: 326px) {
@@ -2248,7 +2248,7 @@ html .contenedor .arrow {
     width: 100%;
   }
   .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
     margin: 0px 0px 0px -17px;
@@ -2275,7 +2275,7 @@ html .contenedor .arrow {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .containerDevelopment, .contenedor .containerDesign {
     width: 70%;
@@ -2287,7 +2287,7 @@ html .contenedor .arrow {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine {
     width: 100%;
@@ -2296,7 +2296,7 @@ html .contenedor .arrow {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
     width: 60%;
@@ -2365,7 +2365,7 @@ html .contenedor .arrow {
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 0px auto;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob, .contenedor .containerDevelopment .vacanciesDesign .cardJob, .contenedor .containerDesign .vacanciesDevelopment .cardJob, .contenedor .containerDesign .vacanciesDesign .cardJob {
     width: 100%;
@@ -2386,7 +2386,7 @@ html .contenedor .arrow {
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .cardVacancy .info .local, .contenedor .containerDevelopment .vacanciesDesign .cardJob .cardVacancy .info .local, .contenedor .containerDesign .vacanciesDevelopment .cardJob .cardVacancy .info .local, .contenedor .containerDesign .vacanciesDesign .cardJob .cardVacancy .info .local {
     width: 100%;
-    border-bottom: 1px solid rgb(66, 66, 66);
+    border-bottom: 1px solid #2e2e2e;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulate, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDesign .vacanciesDesign .cardJob .postulate {
     width: 35%;
@@ -2394,10 +2394,10 @@ html .contenedor .arrow {
 }
 @media (max-width: 490px) {
   .contenedor .buscadorServices p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .cards .anuncio {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .cards .subtitle {
     font-size: 1.2rem;
@@ -2410,17 +2410,17 @@ html .contenedor .arrow {
     width: 13%;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .cardVacancy .info .position h4, .contenedor .containerDevelopment .vacanciesDesign .cardJob .cardVacancy .info .position h4, .contenedor .containerDesign .vacanciesDevelopment .cardJob .cardVacancy .info .position h4, .contenedor .containerDesign .vacanciesDesign .cardJob .cardVacancy .info .position h4 {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .cardVacancy .info .local p span, .contenedor .containerDevelopment .vacanciesDesign .cardJob .cardVacancy .info .local p span, .contenedor .containerDesign .vacanciesDevelopment .cardJob .cardVacancy .info .local p span, .contenedor .containerDesign .vacanciesDesign .cardJob .cardVacancy .info .local p span {
-    font-size: 0.4rem;
+    font-size: 0.6rem;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .cardVacancy .info .local .data p, .contenedor .containerDevelopment .vacanciesDesign .cardJob .cardVacancy .info .local .data p, .contenedor .containerDesign .vacanciesDevelopment .cardJob .cardVacancy .info .local .data p, .contenedor .containerDesign .vacanciesDesign .cardJob .cardVacancy .info .local .data p {
-    font-size: 0.4rem;
+    font-size: 0.6rem;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulate, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDesign .vacanciesDesign .cardJob .postulate {
     width: 40%;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
   .contenedor .containerTestimony .headline {
     width: 90%;
@@ -2430,10 +2430,10 @@ html .contenedor .arrow {
     font-size: 1.2rem;
   }
   .contenedor .containerTestimony .headline .paragraph {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .containerTestimony .headline .promotion {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
     width: 90%;
@@ -2442,23 +2442,23 @@ html .contenedor .arrow {
     margin: 2px auto 15px 5px;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionMedium .paragraph {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
   .contenedor .containerTestimony .verMas {
     width: 90%;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .accordion .subtitle {
     font-size: 1.2rem;
   }
   .contenedor .accordion .scrollDownAnswers summary {
-    font-size: 0.8rem !important;
+    font-size: 0.9rem !important;
   }
   .contenedor .accordion .scrollDownAnswers p {
-    font-size: 0.75rem !important;
+    font-size: 0.9rem !important;
   }
   .contenedor .accordion .whatsApp {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .contenedor .formContainer .subtitulo {
     font-size: 1.2rem;
@@ -2466,14 +2466,14 @@ html .contenedor .arrow {
   .contenedor .formContainer .locationForm .form .btnAccion {
     width: 100%;
     margin: 10px auto;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }
 @media (max-width: 400px) {
   .contenedor .cards {
     padding: 0px 10px;
   }
-  .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadore {
+  .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadores {
     width: 80%;
   }
   .contenedor .containerDevelopment, .contenedor .containerDesign {
